--- a/edge-oa/src/main/webapp/WEB-INF/web.xml
+++ b/edge-oa/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,10 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  
-  -- Spring和mybatis的配置文件 -->
+	<display-name>Archetype Created Web Application</display-name>
+	
+
+	<!-- Spring和mybatis的配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring-mybatis.xml</param-value>
@@ -25,13 +26,19 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	
 	<!-- Spring监听器 -->
 	<listener>
 		<listener-class>
 			org.springframework.web.context.ContextLoaderListener
 		</listener-class>
 	</listener>
+	
+	<!-- 必须放在spring的监听器后面 权限初始化监听 -->
+	<listener>
+		<listener-class>com.edge.listener.OAInitListener</listener-class>
+	</listener>
+
 	<!-- 防止Spring内存溢出监听器 -->
 	<listener>
 		<listener-class>
@@ -57,5 +64,4 @@
 		<!-- 此处可以可以配置成*.do，对应struts的后缀习惯 -->
 		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
-	
 </web-app>
