--- a/edge-oa/pom.xml
+++ b/edge-oa/pom.xml
@@ -297,6 +297,20 @@
 				<version>2.8.5</version>
 			</dependency>
 			
+			<dependency>
+			    <groupId>commons-net</groupId>
+			    <artifactId>commons-net</artifactId>
+			    <version>3.6</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>com.jcraft</groupId>
+			    <artifactId>jsch</artifactId>
+			    <version>0.1.55</version>
+			</dependency>
+			
+			
+			
 		</dependencies>
 
 		<build>
