--- a/edge-oa/pom.xml
+++ b/edge-oa/pom.xml
@@ -306,6 +306,12 @@
 			<version>0.1.55</version>
 		</dependency>
 
+		<dependency>
+		    <groupId>net.sf.json-lib</groupId>
+		    <artifactId>json-lib</artifactId>
+		    <version>2.4</version>
+		    <classifier>jdk15</classifier>
+		</dependency>
 
 	</dependencies>
 
